--- a/index.html
+++ b/index.html
@@ -9,8 +9,28 @@
 
 <body>
   <header>
-    <h1>Discover hidden places in the world around you</h1>
+    <h1>Discover hidd en places in the world around you</h1>
     <a href="https://www.google.com/" class="aquamarine">Download Excursion (Coming soon!)</a>
   </header>
+
+  <div class="center">
+    <video src="resources/video/excursion.mp4" autoplay loop>
+      Your browser does not support the HTML5 video element
+    </video>
+    <h2 class="secondary-heading">Your personal travel guide</h2>
+    <p class="minor-secondary-heading">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt="photo of travelers in a tent">
+  </div>
+
+
+  <div class="center last-div">
+    <img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt="graphic of a cellphone">
+    <h2 class="secondary-heading">Coming soon for iphone and Android</h2>
+    <a href="https://www.google.com/" class="aquamarine">Download Excursion (Coming soon!)</a>
+  </div>
+  <footer>
+    <p> &copy; Excursion</p>
+  </footer>
+  
 </body>
 </html>
